--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world</title>
-    <link rel="stylesheet" href="./First-project/style.css">
+    <link rel="stylesheet" href="https://github.com/hoavujv5632/First-Project/blob/main/style.css">
     <style>
         * {
     padding: 0;
