--- a/index.html
+++ b/index.html
@@ -5,78 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world</title>
-    <link rel="stylesheet" href="https://github.com/hoavujv5632/First-Project/blob/main/style.css">
-    <style>
-        * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/* 
-1. Từ ngoài vào trong
-2. Từ trên xuống dưới
-3. Tổng quan đến chi tiết
-*/
-
-/* 
-1. Vị trí
-2. Kích thước (width, height)
-3. Màu sắc
-4. Kiểu dáng (kiểu chữ, hình tròn, vuông,...)
-*/
-
-#main {
-
-}
-
-#header {
-    height: 46px;
-    background-color: #000;
-}
-
-#nav {
-
-}
-
-#nav li {
-    display: inline-block;
-}
-
-#nav li:hover a {
-    color: #000;
-    background-color: #ccc;
-}
-
-#nav li a {
-    color: #fff;
-    text-decoration: none;
-    line-height: 46px;
-    padding: 0 24px;
-    display: inline-block;
-}
-
-#nav .subnav {
-    display: none;
-}
-
-#slider {
-
-}
-
-#content {
-
-}
-
-#footer {
-
-}
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="https://hoavujv5632.github.io/style.css">
+   
 </head>
 <body>
     <div id="main">
